stack/DevOps/11. Container Orchestration (Kubernetes)/exercices/homework/2/deployment_nodeport_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deployment-nodeport-service
spec:
  type: NodePort
  selector:
    type: nginx
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 30080
