stack/DevOps/11. Container Orchestration (Kubernetes)/exercices/homework/2/policy_allow_nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy-allow-nginx-echo
  namespace: playground
spec:
  podSelector:
    matchLabels:
      app: echo-pod
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: default
        podSelector:
          matchLabels:
            type: nginx
