stack/DevOps/11. Container Orchestration (Kubernetes)/exercices/homework/2/policy_denyall.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy-deny-all
  namespace: playground
spec:
  podSelector: {}
  policyTypes:
    - Ingress
